@@ -1,3 +1,8 @@
+2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	* libopenvas_hg/hg_add_hosts.c (hg_add_comma_delimited_hosts):
+	Reformatted.
+
 2009-01-08  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>
 
 	* libopenvas/store.c (store_load_plugin): Fixed memory leaks. 
